--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/fragment_item_list">
 
     <fragment
-        android:id="@+id/FirstFragment"
-        android:name="com.example.myandroidapp.FirstFragment"
-        android:label="@string/first_fragment_label"
-        tools:layout="@layout/fragment_first">
+        android:id="@+id/fragment_item_list"
+        android:name="com.example.myandroidapp.data.movies.movielist.MovieFragment"
+        android:label="@string/movie_list_fragment_label"
+        tools:layout="@layout/fragment_item_list">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_MovieFragment_to_MovieEditFragment"
+            app:destination="@id/fragment_item" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
-        android:name="com.example.myandroidapp.SecondFragment"
-        android:label="@string/second_fragment_label"
+        android:id="@+id/fragment_item"
+        android:name="com.example.myandroidapp.data.movies.edit.MovieEditFragment"
+        android:label="@string/movie_edit_fragment_label"
         tools:layout="@layout/fragment_second">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_MovieEditFragment_to_MovieFragment"
+            app:destination="@id/fragment_item_list" />
     </fragment>
 </navigation>
